--- a/LogisticalRegression.ipynb
+++ b/LogisticalRegression.ipynb
@@ -88,7 +88,20 @@
     "- For each X<super>n</super> training example where expect Y=1:\n",
     "    - if x is large, h(x) is 0 (or <0).  Or has 0 cost.   \n",
     "    - If x is small (or close to 0), the cost skyrockets to be very large (infinity)\n",
-    "- Conversely if expect Y = 0, wrong answers have super high cost, right predictions have 0 cost.\n",
+    "- Conversely if expect Y = 0, wrong answers have super high cost, right predictions have 0 cost.  \n",
+    "<i>I'm not sure I get it, but I guess you would never have a wrong guess of 0 or 1 when expecting 1 or 0 ??</i>\n",
+    "\n",
+    "### Gradient Descent \n",
+    "\n",
+    "Again use GD to solve for O in example  \n",
+    "- hypothesis:  h<sub>O</sub>(x) = O<sup>0</sup> + O<sup>1</sup>X<sup>1</sup> + O<sup>2</sup>X<sup>2</sup> + O<sup>n</sup>X<sup>n</sup>  \n",
+    "- cost function:  C(O) = Y * (-log(h<sub>O</sub>(x))) + (1-Y)(log(h<sub>O</sub>(x)))\n",
+    "- As before, GD loop:\n",
+    "    - O<sub>j</sub> = O<sub>j</sub> - learningRate * partialDeriv(C(O))\n",
+    "    - for each O parameter \n",
+    "- Until C(O) is minimized\n",
+    "\n",
+    "I need to update my grad_solver to solve for a new f function and e cost, otherwise it can work the same.  (I should update it to take in an arbitrary function (h) and vector of O weights but that is TBD.\n",
     "\n"
    ]
   },
@@ -97,7 +110,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# solver for logistic regression\n",
+    "def grad_descent3(testData):\n",
+    "    guessA = guessB = 1.0   #initial guess y=1x+1\n",
+    "\n",
+    "    stepA = 0.00000005   #dif step for diff A,B ?\n",
+    "    stepB = 0.25         #maybe normalize data first\n",
+    "    step_limit = 0.0001  # when to stop, when cost stops changing\n",
+    "    loop_limit = 5       # arbitrary max limits\n",
+    "    costChange = 1.0\n",
+    "\n",
+    "    A,B,x,y = sp.symbols('A B x y')\n",
+    "    f = A*x + B  # linear func y=mx+b\n",
+    "    e = (f - y)**2  # error squared\n",
+    "    print ('init guess A: %f, B: %f'%(guessA,guessB))\n",
+    "    print ('init func: %s, test size: %d' %(str(f),testData.shape[0]))\n",
+    "    \n",
+    "    costF = evalSumF(e,x,y,testData)  # cost fun evaluted for testData\n",
+    "    print('init costF',str(costF)[:80])\n",
+    "    costEval = costF.subs(A,guessA).subs(B,guessB)  # cost evaluted for A B guess\n",
+    "    print('init cost',costEval)\n",
+    "\n",
+    "    i=0  \n",
+    "    while (abs(costChange) > step_limit and i<loop_limit):  # arbitrary limiter\n",
+    "        pda = evalPartialDeriv(e,x,y,testData,A,guessA,B,guessB)\n",
+    "        pdb = evalPartialDeriv(e,x,y,testData,B,guessB,A,guessA)\n",
+    "        guessA = guessA - stepA * pda\n",
+    "        guessB = guessB - stepB * pdb\n",
+    "        previousCost = costEval\n",
+    "        costEval = costF.subs(A,guessA).subs(B,guessB)\n",
+    "        costChange = previousCost-costEval\n",
+    "        print ('i=%d,cost=%d,A=%f,B=%f'%(i, int(costEval), guessA, guessB))\n",
+    "        i=i+1\n",
+    "    return guessA,guessB"
+   ]
   }
  ],
  "metadata": {
