--- a/LogisticalRegression.ipynb
+++ b/LogisticalRegression.ipynb
@@ -112,38 +112,43 @@
    "outputs": [],
    "source": [
     "# solver for logistic regression\n",
-    "def grad_descent3(testData):\n",
-    "    guessA = guessB = 1.0   #initial guess y=1x+1\n",
+    "# psuedocode for now\n",
     "\n",
-    "    stepA = 0.00000005   #dif step for diff A,B ?\n",
-    "    stepB = 0.25         #maybe normalize data first\n",
+    "def grad_descent3(testData):\n",
+    "    guesses = [1.0]*6    # initial guess for all \n",
+    "    step = 0.0001        # init step\n",
     "    step_limit = 0.0001  # when to stop, when cost stops changing\n",
     "    loop_limit = 5       # arbitrary max limits\n",
     "    costChange = 1.0\n",
     "\n",
-    "    A,B,x,y = sp.symbols('A B x y')\n",
-    "    f = A*x + B  # linear func y=mx+b\n",
-    "    e = (f - y)**2  # error squared\n",
-    "    print ('init guess A: %f, B: %f'%(guessA,guessB))\n",
+    "    c,g,h,y,x = sp.symbols('c g h y x')\n",
+    "    ts = sp.symbols('t0 t1 t2 t3 t4 t5')  #theta weight/parameter array\n",
+    "    xs = sp.symbols('x0 x1 x2 x3 x4 x5')  #feature array\n",
+    "\n",
+    "    h = ts[0]*xs[0] + ts[1]*xs[1] + ts[2]*xs[2] + ts[3]*xs[3] + ts[4]*xs[4] + ts[5]*xs[5] \n",
+    "    g = 1 / (1+mp.e**-h)   # wrap h in sigmoid\n",
+    "    c = y*-math.log(x) + (1-y)*-math.log(1-x)  # cost func of single sample\n",
+    "    \n",
+    "    print ('init guesses',guesses)\n",
     "    print ('init func: %s, test size: %d' %(str(f),testData.shape[0]))\n",
     "    \n",
-    "    costF = evalSumF(e,x,y,testData)  # cost fun evaluted for testData\n",
-    "    print('init costF',str(costF)[:80])\n",
-    "    costEval = costF.subs(A,guessA).subs(B,guessB)  # cost evaluted for A B guess\n",
+    "    costF = evalSumF(c,ts,xs,testData)  # cost fun evaluted for testData\n",
+    "    print('init costF',str(costF)[:80]) # show first 80 char of cost evaluation\n",
+    "    costEval = costF.subs(ts,guesses)  # cost evaluted for all terms guess\n",
     "    print('init cost',costEval)\n",
     "\n",
     "    i=0  \n",
     "    while (abs(costChange) > step_limit and i<loop_limit):  # arbitrary limiter\n",
-    "        pda = evalPartialDeriv(e,x,y,testData,A,guessA,B,guessB)\n",
-    "        pdb = evalPartialDeriv(e,x,y,testData,B,guessB,A,guessA)\n",
-    "        guessA = guessA - stepA * pda\n",
-    "        guessB = guessB - stepB * pdb\n",
+    "        j=0\n",
+    "        for theta in ts:\n",
+    "            pdb = evalPartialDeriv(e,theta,xs[j],testData,guesses[j])\n",
+    "            guesses[j] = guesses[j] - stepA * pda\n",
     "        previousCost = costEval\n",
-    "        costEval = costF.subs(A,guessA).subs(B,guessB)\n",
+    "        costEval = costF.subs(ts, guesses)\n",
     "        costChange = previousCost-costEval\n",
-    "        print ('i=%d,cost=%d,A=%f,B=%f'%(i, int(costEval), guessA, guessB))\n",
+    "        print ('i=%d,cost=%d'%(i, int(costEval), guessA, guessB), guesses)\n",
     "        i=i+1\n",
-    "    return guessA,guessB"
+    "    return guesses\n"
    ]
   }
  ],
