--- a/FeatureEngineering.ipynb
+++ b/FeatureEngineering.ipynb
@@ -460,12 +460,12 @@
     "\n",
     "Or I can just use scikit-learn's feature magic and see what they do.  Let me see...  http://scikit-learn.org/stable/modules/feature_selection.html\n",
     "\n",
-    "Using sckit <B>VarianceThreshold</B> - feature reduction magic 3189 -> 326 with a 0.80 variance setting!\n"
+    "Using sckit <B>VarianceThreshold</B> - feature reduction magic 3189 -> 326 with a 0.80 variance setting!  (What does .8 mean I dunno)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
     "# VarianceThreadhold\n",
     "print (t1.shape)\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
-    "model = VarianceThreshold(threshold=(.8 * (1 - .8)))\n",
+    "model = VarianceThreshold(threshold=(.80 * (1 - .80)))\n",
     "m = model.fit_transform(t1)\n",
     "print ('Variance .8',m.shape)\n",
     "\n",
@@ -497,7 +497,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scikit <B>SelectKBest</B> (top 50) same magic goes from 3189 features to top 50 !\n"
+    "-----\n",
+    "\n",
+    "Scikit <B>SelectKBest</B> (top 50) same magic goes from 3189 features to top 50 !   How this works I dont know!\n"
    ]
   },
   {
