--- a/FeatureEngineering.ipynb
+++ b/FeatureEngineering.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -504,16 +504,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100, 3189)\n",
+      "(100, 2826)\n",
       "('KBest', (100, 50))\n",
-      "[u'workers', u'working', u'works', u'world', u'worried', u'worry', u'worse', u'worthy', u'wot', u'would', u'wouldn', u'wreck', u'writ', u'write', u'written', u'wrong', u'ya', u'yabbos', u'yankee', u'yard', u'yeah', u'year', u'years', u'yeh', u'yellow', u'yellowy', u'yer', u'yes', u'yesterday', u'yet', u'yo', u'yob', u'york', u'you', u'young', u'younger', u'your', u'yours', u'yourself', u'youth', u'zealot', u'zed', u'zee', u'zion', u'zombies', u'zone', u'zoo', u'zooming', u'zooms', u'zydeco']\n"
+      "[u'and', u'baby', u'be', u'body', u'boy', u'cause', u'could', u'dance', u'do', u'don', u'doo', u'edge', u'fame', u'feel', u'fu', u'girl', u'give', u'good', u'guns', u'gypsy', u'heart', u'hey', u'it', u'just', u'know', u'let', u'll', u'love', u'me', u'my', u'need', u'oh', u'on', u'retro', u'schei\\xdfe', u'shake', u'superstar', u'that', u'there', u'tonight', u'wah', u'wanna', u'want', u'what', u'wish', u'with', u'yeah', u'yo', u'you', u'your']\n"
      ]
     }
    ],
@@ -521,16 +521,31 @@
     "# SelectKBest(50)\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2\n",
-    "X, y = t1, yArr1\n",
+    "trainingMatrix1,yArr,labels,fnames = getGagaData(maxrows=100)\n",
+    "X, y = numpy.array(trainingMatrix1), yArr\n",
     "print(X.shape)\n",
     "model = SelectKBest(chi2, k=50)\n",
     "X_new = model.fit_transform(X, y)   # need to keep labels\n",
     "print('KBest',X_new.shape)\n",
     "\n",
     "picklist = model.get_support(True)\n",
-    "pickwords = [labels1[p] for p in picklist]\n",
+    "pickwords = [labels[p] for p in picklist]\n",
     "print (pickwords)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
