updated perf tests and notebook

--- a/LogisticalRegression.ipynb
+++ b/LogisticalRegression.ipynb
@@ -258,6 +258,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performance sidebar\n",
+    "\n",
+    "How much faster is this solver...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I tested old sympy solver vs matrix solver and its shocking\n",
+    "\n",
+    "| test | sympy | matrix | x increase |\n",
+    "-------|-------|--------|------------|\n",
+    "|5000 loop linear regression (2 features, SGD) | 138.14 sec | 0.93 sec | 251 x faster |\n",
+    "|1000 loop linear regression (2 feature, BGD) | 44.20 sec | 0.18 sec | 148 x faster | \n",
+    "|500 loop logistic regression (10 features, mini-BGD) | 394.25 sec | 0.14 sec | 2824 x faster |\n",
+    "|250 loop logistic regression (20 features, mini-MBGD) |  sec | sec |  x faster |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classifying Lady Gaga - Putting it all Together !\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:mymodel guesses: ['-0.1770', '-0.2478', '-0.0418', '0.0168', '-0.1137', '-0.1550', '-0.0096', '-0.2135', '0.0143', '0.0156', '-1.1844', '0.0156', '0.2218', '-0.1891', '0.0151', '-0.0596', '-0.2198', '-0.0192', '0.1282', '0.1269', '...'] len 500\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "raw results ['-1.3789', '0.7054', '0.3861', '0.7072', '-1.6613', '-4.9136', '-7.1018', '-4.5589', '-5.5129', '-1.6713', '7.2668', '5.9865', '-2.7832', '0.0083', '-12.0435', '0.8534', '-0.0279', '-8.3808', '-1.3681', '-4.6447', '...'] \n",
+      "sig results ['0.2012', '0.6694', '0.5953', '0.6698', '0.1596', '0.0073', '0.0008', '0.0104', '0.0040', '0.1583', '0.9993', '0.9975', '0.0582', '0.5021', '0.0000', '0.7013', '0.4930', '0.0002', '0.2029', '0.0095', '...']\n",
+      "\n",
+      "0|1 results ['0.0000', '1.0000', '1.0000', '1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '0.0000', '0.0000', '1.0000', '1.0000', '0.0000', '1.0000', '0.0000', '1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '...']\n",
+      "\n",
+      "diff vs y ['0.0000', '0.0000', '0.0000', '1.0000', '0.0000', '0.0000', '0.0000', '-1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '-1.0000', '0.0000', '-1.0000', '1.0000', '-1.0000', '-1.0000', '-1.0000', '0.0000', '...']\n",
+      "\n",
+      "mymodel errors: 17.0 / 84 = 0.202381\n"
+     ]
+    }
+   ],
+   "source": [
+    "import featureEngineering as fe\n",
+    "from logisticRegression import reduceFeatures\n",
+    "from sklearn.utils import shuffle\n",
+    "from gdsolvers import *\n",
+    "log.getLogger().setLevel(log.ERROR)\n",
+    "\n",
+    "xMatrix,yArr,features,fnames = fe.getGagaData(maxrows=300,stopwords='english')   # get all songs \n",
+    "xMatrix,yArr = shuffle(xMatrix, random_state=0), shuffle(yArr, random_state=0)   # shuffle\n",
+    "partition = int(.70*len(yArr))            \n",
+    "trainingMatrix = xMatrix[:partition]     # 70% training\n",
+    "trainingY = yArr[:partition]\n",
+    "testMatrix = xMatrix[partition:]         # 30% test [84 samples]\n",
+    "testY = yArr[partition:]\n",
+    "\n",
+    "## train the model\n",
+    "X = np.array(trainingMatrix)\n",
+    "Y = trainingY\n",
+    "X,rfeatures = reduceFeatures(X, Y, features, 500)   # reduce features from 4000+ -> 500\n",
+    "gs = grad_descent5(lambda y,x: sigmoid(x)-y,sigmoidCost,X,Y,step=0.1,step_limit=-1,loop_limit=1000)\n",
+    "log.error('mymodel guesses: %s len %d'%(gf(gs), len(gs)))\n",
+    "\n",
+    "## test the model\n",
+    "df = pandas.DataFrame(testMatrix, columns=features)   # new df w/ column names\n",
+    "X = df[rfeatures].as_matrix()                         # filter out only rfeatures\n",
+    "testRes = np.dot(X, gs)                               # take test data and evaluate\n",
+    "testResRound = [round(sigmoid(x),0) for x in testRes] # to sigmoid\n",
+    "testDiffs = np.array(testResRound) - np.array(testY)  # diff vs Y\n",
+    "print ('raw results %s '%(gf(testRes)))\n",
+    "print ('sig results %s'%gf([sigmoid(x) for x in testRes]))\n",
+    "print ('\\n0|1 results %s'%gf([round(sigmoid(x)) for x in testRes]))\n",
+    "print ('\\ndiff vs y %s'%gf(testDiffs))\n",
+    "print('\\nmymodel errors: %s / %s = %f'%(sum([abs(x) for x in testDiffs]),len(testY),sum([abs(x) for x in testDiffs])/len(testY)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary of above\n",
+    "Using 500 features (reduced w/ kMeans), we ran 70% training to produce the Theta (mymodel guesses array of weights).   \n",
+    "\n",
+    "<B>raw results</B>:  are the h(x) totals per feature   \n",
+    "<B>sig results</B>:  are the g(h(x)) after running thru the sigmoid function to get 0.0-1.0 values  \n",
+    "<B>0|1 results</B>:  rounding g(h(x)) to 0 or 1 to compare vs Y's\n",
+    "<B>diff v y</B>:  the g(h(x)) - y results -- 0 means prediction was correct.  +1 = false pos, -1 false neg  \n",
+    "\n",
+    "In summary we have a <B><u>80% correct hit rate</u></B> (17 errors out of 84 test examples)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
