better tables for example

--- a/LogisticalRegression.ipynb
+++ b/LogisticalRegression.ipynb
@@ -291,28 +291,308 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR:root:mymodel guesses: ['-0.1770', '-0.2478', '-0.0418', '0.0168', '-0.1137', '-0.1550', '-0.0096', '-0.2135', '0.0143', '0.0156', '-1.1844', '0.0156', '0.2218', '-0.1891', '0.0151', '-0.0596', '-0.2198', '-0.0192', '0.1282', '0.1269', '...'] len 500\n"
+      "Training results: \n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>word/feature</th>\n",
+       "      <td>1977</td>\n",
+       "      <td>48</td>\n",
+       "      <td>99999</td>\n",
+       "      <td>addicted</td>\n",
+       "      <td>adds</td>\n",
+       "      <td>advertising</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>ago</td>\n",
+       "      <td>aha</td>\n",
+       "      <td>aimin</td>\n",
+       "      <td>ain</td>\n",
+       "      <td>ak</td>\n",
+       "      <td>amen</td>\n",
+       "      <td>america</td>\n",
+       "      <td>american</td>\n",
+       "      <td>ammunition</td>\n",
+       "      <td>amp</td>\n",
+       "      <td>angels</td>\n",
+       "      <td>animal</td>\n",
+       "      <td>apart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>theta weight</th>\n",
+       "      <td>-1.3789</td>\n",
+       "      <td>0.7054</td>\n",
+       "      <td>0.3861</td>\n",
+       "      <td>0.7072</td>\n",
+       "      <td>-1.6613</td>\n",
+       "      <td>-4.9136</td>\n",
+       "      <td>-7.1018</td>\n",
+       "      <td>-4.5589</td>\n",
+       "      <td>-5.5129</td>\n",
+       "      <td>-1.6713</td>\n",
+       "      <td>7.2668</td>\n",
+       "      <td>5.9865</td>\n",
+       "      <td>-2.7832</td>\n",
+       "      <td>0.0083</td>\n",
+       "      <td>-12.0435</td>\n",
+       "      <td>0.8534</td>\n",
+       "      <td>-0.0279</td>\n",
+       "      <td>-8.3808</td>\n",
+       "      <td>-1.3681</td>\n",
+       "      <td>-4.6447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   0       1       2         3        4            5   \\\n",
+       "word/feature     1977      48   99999  addicted     adds  advertising   \n",
+       "theta weight  -1.3789  0.7054  0.3861    0.7072  -1.6613      -4.9136   \n",
+       "\n",
+       "                     6        7        8        9       10      11       12  \\\n",
+       "word/feature  afternoon      ago      aha    aimin     ain      ak     amen   \n",
+       "theta weight    -7.1018  -4.5589  -5.5129  -1.6713  7.2668  5.9865  -2.7832   \n",
+       "\n",
+       "                   13        14          15       16       17       18  \\\n",
+       "word/feature  america  american  ammunition      amp   angels   animal   \n",
+       "theta weight   0.0083  -12.0435      0.8534  -0.0279  -8.3808  -1.3681   \n",
+       "\n",
+       "                   19  \n",
+       "word/feature    apart  \n",
+       "theta weight  -4.6447  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test#</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>raw h(x)</td>\n",
+       "      <td>-1.3789</td>\n",
+       "      <td>0.7054</td>\n",
+       "      <td>0.3861</td>\n",
+       "      <td>0.7072</td>\n",
+       "      <td>-1.6613</td>\n",
+       "      <td>-4.9136</td>\n",
+       "      <td>-7.1018</td>\n",
+       "      <td>-4.5589</td>\n",
+       "      <td>-5.5129</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.9865</td>\n",
+       "      <td>-2.7832</td>\n",
+       "      <td>0.0083</td>\n",
+       "      <td>-12.0435</td>\n",
+       "      <td>0.8534</td>\n",
+       "      <td>-0.0279</td>\n",
+       "      <td>-8.3808</td>\n",
+       "      <td>-1.3681</td>\n",
+       "      <td>-4.6447</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sig g(h(x))</td>\n",
+       "      <td>0.2012</td>\n",
+       "      <td>0.6694</td>\n",
+       "      <td>0.5953</td>\n",
+       "      <td>0.6698</td>\n",
+       "      <td>0.1596</td>\n",
+       "      <td>0.0073</td>\n",
+       "      <td>0.0008</td>\n",
+       "      <td>0.0104</td>\n",
+       "      <td>0.0040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.9975</td>\n",
+       "      <td>0.0582</td>\n",
+       "      <td>0.5021</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.7013</td>\n",
+       "      <td>0.4930</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>0.2029</td>\n",
+       "      <td>0.0095</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>round g(h(x))</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>h(x)-y</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>-1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>-1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>-1.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>-1.0000</td>\n",
+       "      <td>-1.0000</td>\n",
+       "      <td>-1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           test#        0       1       2       3        4        5        6  \\\n",
+       "0       raw h(x)  -1.3789  0.7054  0.3861  0.7072  -1.6613  -4.9136  -7.1018   \n",
+       "1    sig g(h(x))   0.2012  0.6694  0.5953  0.6698   0.1596   0.0073   0.0008   \n",
+       "2  round g(h(x))   0.0000  1.0000  1.0000  1.0000   0.0000   0.0000   0.0000   \n",
+       "3         h(x)-y   0.0000  0.0000  0.0000  1.0000   0.0000   0.0000   0.0000   \n",
+       "\n",
+       "         7        8 ...       11       12      13        14      15       16  \\\n",
+       "0  -4.5589  -5.5129 ...   5.9865  -2.7832  0.0083  -12.0435  0.8534  -0.0279   \n",
+       "1   0.0104   0.0040 ...   0.9975   0.0582  0.5021    0.0000  0.7013   0.4930   \n",
+       "2   0.0000   0.0000 ...   1.0000   0.0000  1.0000    0.0000  1.0000   0.0000   \n",
+       "3  -1.0000   0.0000 ...   0.0000  -1.0000  0.0000   -1.0000  1.0000  -1.0000   \n",
+       "\n",
+       "        17       18       19   20  \n",
+       "0  -8.3808  -1.3681  -4.6447  ...  \n",
+       "1   0.0002   0.2029   0.0095  ...  \n",
+       "2   0.0000   0.0000   0.0000  ...  \n",
+       "3  -1.0000  -1.0000   0.0000  ...  \n",
+       "\n",
+       "[4 rows x 22 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "raw results ['-1.3789', '0.7054', '0.3861', '0.7072', '-1.6613', '-4.9136', '-7.1018', '-4.5589', '-5.5129', '-1.6713', '7.2668', '5.9865', '-2.7832', '0.0083', '-12.0435', '0.8534', '-0.0279', '-8.3808', '-1.3681', '-4.6447', '...'] \n",
-      "sig results ['0.2012', '0.6694', '0.5953', '0.6698', '0.1596', '0.0073', '0.0008', '0.0104', '0.0040', '0.1583', '0.9993', '0.9975', '0.0582', '0.5021', '0.0000', '0.7013', '0.4930', '0.0002', '0.2029', '0.0095', '...']\n",
       "\n",
-      "0|1 results ['0.0000', '1.0000', '1.0000', '1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '0.0000', '0.0000', '1.0000', '1.0000', '0.0000', '1.0000', '0.0000', '1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '...']\n",
-      "\n",
-      "diff vs y ['0.0000', '0.0000', '0.0000', '1.0000', '0.0000', '0.0000', '0.0000', '-1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '-1.0000', '0.0000', '-1.0000', '1.0000', '-1.0000', '-1.0000', '-1.0000', '0.0000', '...']\n",
-      "\n",
-      "mymodel errors: 17.0 / 84 = 0.202381\n"
+      " Total Test Results.  # Errors: 17.0 / 84 = 0.202381 error rate\n"
      ]
     }
    ],
@@ -336,19 +616,25 @@
     "Y = trainingY\n",
     "X,rfeatures = reduceFeatures(X, Y, features, 500)   # reduce features from 4000+ -> 500\n",
     "gs = grad_descent5(lambda y,x: sigmoid(x)-y,sigmoidCost,X,Y,step=0.1,step_limit=-1,loop_limit=1000)\n",
-    "log.error('mymodel guesses: %s len %d'%(gf(gs), len(gs)))\n",
     "\n",
     "## test the model\n",
     "df = pandas.DataFrame(testMatrix, columns=features)   # new df w/ column names\n",
     "X = df[rfeatures].as_matrix()                         # filter out only rfeatures\n",
     "testRes = np.dot(X, gs)                               # take test data and evaluate\n",
-    "testResRound = [round(sigmoid(x),0) for x in testRes] # to sigmoid\n",
+    "testResSig = [sigmoid(x) for x in testRes]            # to sigmoid\n",
+    "testResRound = [round(sigmoid(x),0) for x in testRes] # to rounded O|1\n",
     "testDiffs = np.array(testResRound) - np.array(testY)  # diff vs Y\n",
-    "print ('raw results %s '%(gf(testRes)))\n",
-    "print ('sig results %s'%gf([sigmoid(x) for x in testRes]))\n",
-    "print ('\\n0|1 results %s'%gf([round(sigmoid(x)) for x in testRes]))\n",
-    "print ('\\ndiff vs y %s'%gf(testDiffs))\n",
-    "print('\\nmymodel errors: %s / %s = %f'%(sum([abs(x) for x in testDiffs]),len(testY),sum([abs(x) for x in testDiffs])/len(testY)))\n"
+    "\n",
+    "print 'Training results: '\n",
+    "weightSample = pandas.DataFrame(rfeatures[:20], columns=['word/feature'])\n",
+    "weightSample['theta weight'] = gf(testRes[:20])\n",
+    "display(weightSample.transpose())\n",
+    "\n",
+    "testResults = pandas.DataFrame([gf(testRes),gf(testResSig),gf(testResRound), gf(testDiffs)])\n",
+    "testResults.insert(0,'test#',['raw h(x)','sig g(h(x))','round g(h(x))','h(x)-y'])\n",
+    "display(testResults)     \n",
+    "                                \n",
+    "print('\\n Total Test Results.  # Errors: %s / %s = %f error rate'%(sum([abs(x) for x in testDiffs]),len(testY),sum([abs(x) for x in testDiffs])/len(testY)))\n"
    ]
   },
   {
